--- a/_posts/2019-12-22-the-us-narrative-today.html
+++ b/_posts/2019-12-22-the-us-narrative-today.html
@@ -1550,107 +1550,107 @@ stories:
   domain: http://www.orlandosentinel.com/
   link: http://www.orlandosentinel.com/news/osceola-county/os-ne-semi-crash-desert-inn-yeehaw-junction-20191222-xdntk5zbunfztfn6bnpycxzlta-story.html
 images:
-- name: dc-statue-dcstatue-creativity.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/dc-statue-dcstatue-creativity.jpg
-- name: white-house-lawn-white-house-window-dark-soul.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-lawn-white-house-window-dark-soul.jpg
-- name: razorwire-DSC-0080-colorful-dream.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/razorwire-DSC-0080-colorful-dream.jpg
-- name: walled-garden-walled-garden-dark-dali.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/walled-garden-walled-garden-dark-dali.jpg
-- name: sand-hand-sand-hand-diego-rivera1.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/sand-hand-sand-hand-diego-rivera1.jpg
-- name: blossombar-hot-spicy-file-00-00-00-00.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/blossombar-hot-spicy-file-00-00-00-00.jpg
-- name: amusement-park-amusement-park-2-purple-pond.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/amusement-park-amusement-park-2-purple-pond.jpg
-- name: catacombs-catacombs-ww2-dresden.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/catacombs-catacombs-ww2-dresden.jpg
-- name: dragon-desert-desert-dragon-blue-granite.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/dragon-desert-desert-dragon-blue-granite.jpg
-- name: oldtrain-oldtrain-blue-circuit.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldtrain-oldtrain-blue-circuit.jpg
-- name: flower-barbed-wire-flower-barbed-wire-blue-granite.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/flower-barbed-wire-flower-barbed-wire-blue-granite.jpg
-- name: stories-yellow-tree-in-the-rocks.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stories-yellow-tree-in-the-rocks.jpg
-- name: copper-circuit-satellite-with-sunset.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/copper-circuit-satellite-with-sunset.jpg
-- name: la-muse-city-skyline-bright.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/la-muse-city-skyline-bright.jpg
-- name: ellis-island-ellisisland-space-pizza.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/ellis-island-ellisisland-space-pizza.jpg
-- name: carry-load-carryload-ww2-dresden.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/carry-load-carryload-ww2-dresden.jpg
-- name: la-muse-memorial-to-the-jews-in-berlin-2.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/la-muse-memorial-to-the-jews-in-berlin-2.jpg
-- name: windowmountain-window-mountain-cinnamon-rolls.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/windowmountain-window-mountain-cinnamon-rolls.jpg
-- name: braceros-domingo-ulloa-border-crossing-through-fence-2.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/braceros-domingo-ulloa-border-crossing-through-fence-2.jpg
-- name: school-clouds-church-clouds-yellow-collage.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/school-clouds-church-clouds-yellow-collage.jpg
-- name: carry-load-carryload-green-zuma.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/carry-load-carryload-green-zuma.jpg
-- name: white-house-lawn-white-house-window-matrix.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-lawn-white-house-window-matrix.jpg
-- name: lost-angeles-downtown-freeway-los-angeles-downtow-freeway-blue-circuit-4.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/lost-angeles-downtown-freeway-los-angeles-downtow-freeway-blue-circuit-4.jpg
-- name: oldsmallboat-oldsmallboat-clean-view.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldsmallboat-oldsmallboat-clean-view.jpg
-- name: dragon-desert-desert-dragon-free-woman.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/dragon-desert-desert-dragon-free-woman.jpg
-- name: stories-slashdb-sql-pass-through-mode.png
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stories-slashdb-sql-pass-through-mode.png
-- name: braceros-domingo-ulloa-old-piano-paris-hospital.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/braceros-domingo-ulloa-old-piano-paris-hospital.jpg
-- name: server-cloud-server-racks-clouds-yellow-collage.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/server-cloud-server-racks-clouds-yellow-collage.jpg
-- name: oldhousecars-house-old-cars-alien-goggles.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhousecars-house-old-cars-alien-goggles.jpg
-- name: subway-subway-internet-numbers.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/subway-subway-internet-numbers.jpg
-- name: abandonedbuildings_dark_soul.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/abandonedbuildings_dark_soul.jpg
+- name: adam-smith-adam-smith-aqua.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/adam-smith-adam-smith-aqua.jpg
+- name: liberty-back-statue-liberty-back-green-zuma.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/liberty-back-statue-liberty-back-green-zuma.jpg
+- name: school-clouds-church-clouds-purple-storm.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/school-clouds-church-clouds-purple-storm.jpg
+- name: redondo-beach-harbor-redondo-beach-harbor-creativity.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/redondo-beach-harbor-redondo-beach-harbor-creativity.jpg
+- name: white-house-whitehouse.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-whitehouse.jpg
+- name: oldhouse-granaryfield-space-pizza.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhouse-granaryfield-space-pizza.jpg
+- name: blossombar-alien-goggles-file-00-00-24-99.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/blossombar-alien-goggles-file-00-00-24-99.jpg
+- name: oldhouse-oldhouse-yellow-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhouse-oldhouse-yellow-paper.jpg
+- name: oldroad-old-road-rainbow-festival.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldroad-old-road-rainbow-festival.jpg
+- name: carry-load-carryload-really-hot.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/carry-load-carryload-really-hot.jpg
+- name: server-cloud-server-racks-door-horiz-circuit.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/server-cloud-server-racks-door-horiz-circuit.jpg
 - name: powerlines-power-dark-soul.jpg
   url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/powerlines-power-dark-soul.jpg
-- name: downtown-trucksilo-aqua.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-trucksilo-aqua.jpg
-- name: oldhotel-oldhotel-dark-dali.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhotel-oldhotel-dark-dali.jpg
-- name: containership-containership-colored-circuits.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/containership-containership-colored-circuits.jpg
-- name: white-house-whitehouse-bright-sand.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-whitehouse-bright-sand.jpg
-- name: containership-containership-gred-mash.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/containership-containership-gred-mash.jpg
-- name: server-cloud-server-racks-door-free-woman.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/server-cloud-server-racks-door-free-woman.jpg
-- name: soldiers-talking-34536952486-52cd6bb1d1-h-clean-view.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/soldiers-talking-34536952486-52cd6bb1d1-h-clean-view.jpg
-- name: braceros-domingo-ulloa-los-angeles-downtown-from-afar.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/braceros-domingo-ulloa-los-angeles-downtown-from-afar.jpg
-- name: gears-4882162452-fa3126b38d-b-smooth-ride.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gears-4882162452-fa3126b38d-b-smooth-ride.jpg
-- name: carry-load-carryload-kand-two.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/carry-load-carryload-kand-two.jpg
-- name: copper-circuit-adam-smith-edinburgh.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/copper-circuit-adam-smith-edinburgh.jpg
-- name: ellis-island-ellis-island-room-deep-connections.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/ellis-island-ellis-island-room-deep-connections.jpg
-- name: downtown-los-angeles-downtown-la-colorful-dream.JPG
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-los-angeles-downtown-la-colorful-dream.JPG
-- name: rockingchair-rockingchair-oily-mcoilface.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/rockingchair-rockingchair-oily-mcoilface.jpg
-- name: power-lines-power-lines-empty-space-clean-view.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/power-lines-power-lines-empty-space-clean-view.jpg
-- name: braceros-domingo-ulloa-old-house_36681740046_o.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/braceros-domingo-ulloa-old-house_36681740046_o.jpg
-- name: aws-s3-stories-yuma-downtown.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-stories-yuma-downtown.jpg
-- name: oldhotel-oldhotel-alien-goggles.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhotel-oldhotel-alien-goggles.jpg
-- name: gypsymosaic-gypsy-eyes-constitution.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gypsymosaic-gypsy-eyes-constitution.jpg
+- name: mosaic-face-mosaic-face.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mosaic-face-mosaic-face.jpg
+- name: art-museum-art-museum-colored-circuits.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/art-museum-art-museum-colored-circuits.jpg
+- name: gypsy-wagon-gypsywagon-really-hot.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gypsy-wagon-gypsywagon-really-hot.jpg
+- name: san-francisco-street-view-san-francisco-street-view-cinnamon-rolls.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-street-view-san-francisco-street-view-cinnamon-rolls.jpg
+- name: soldier-kneeling-26304845730-d4e495e25f-o-jap-dys-1.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/soldier-kneeling-26304845730-d4e495e25f-o-jap-dys-1.jpg
+- name: catacombs-catacombs-clean-view.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/catacombs-catacombs-clean-view.jpg
+- name: oldroad-old-road-crabapple.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldroad-old-road-crabapple.jpg
+- name: eduardo-eduardo-oily-mcoilface.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/eduardo-eduardo-oily-mcoilface.jpg
+- name: abandonedbuildings_cinnamon_rolls.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/abandonedbuildings_cinnamon_rolls.jpg
+- name: los-angeles-from-observatory-losangeles-from-observatory-alien-goggles.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/los-angeles-from-observatory-losangeles-from-observatory-alien-goggles.jpg
+- name: gypsymosaic-gypsy-eyes-colorful-dream.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gypsymosaic-gypsy-eyes-colorful-dream.jpg
+- name: braceros-domingo-ulloa-berline-wall-old-building.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/braceros-domingo-ulloa-berline-wall-old-building.jpg
+- name: aws-s3-square-machine-road-light-dali-square.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-square-machine-road-light-dali-square.jpg
+- name: crow_gred_mash.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crow_gred_mash.jpg
+- name: oldhousecars-house-old-cars-attack-planes.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhousecars-house-old-cars-attack-planes.jpg
+- name: fence-fence-ww2-dresden.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fence-fence-ww2-dresden.jpg
+- name: blossombar-crafty-painting-file-00-00-50-08.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/blossombar-crafty-painting-file-00-00-50-08.jpg
+- name: downtown-los-angeles-downtown-la-pablo-blue.JPG
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-los-angeles-downtown-la-pablo-blue.JPG
+- name: legal-statue-legalstatue-purple-pond.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/legal-statue-legalstatue-purple-pond.jpg
+- name: ellis-island-ellisisland-space-pizza.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/ellis-island-ellisisland-space-pizza.jpg
+- name: copper-circuit-girl-reading-bench-garden.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/copper-circuit-girl-reading-bench-garden.jpg
+- name: old-house-oldhouse-deep-connections.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-house-oldhouse-deep-connections.jpg
+- name: ellis-island-ellisisland-alberto-giacometti.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/ellis-island-ellisisland-alberto-giacometti.jpg
+- name: nazi-invasion-old-gas-station_35891228584_o.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nazi-invasion-old-gas-station_35891228584_o.jpg
+- name: server-cloud-server-racks-door-sand-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/server-cloud-server-racks-door-sand-paper.jpg
+- name: rockingchair-rockingchair-dali-three.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/rockingchair-rockingchair-dali-three.jpg
+- name: san-francisco-city-bridge-sf-city-bridge-yellow-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-city-bridge-sf-city-bridge-yellow-paper.jpg
+- name: dc-statue-dcstatue-green-zuma.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/dc-statue-dcstatue-green-zuma.jpg
+- name: soldiers-talking-34536952486-52cd6bb1d1-h-dark-dali.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/soldiers-talking-34536952486-52cd6bb1d1-h-dark-dali.jpg
+- name: old-gas-pumps-oldgaspumps-blue-granite.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-gas-pumps-oldgaspumps-blue-granite.jpg
+- name: yosemite-yosemite-post-modern.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/yosemite-yosemite-post-modern.jpg
+- name: downtown-fredericksburg-atari-missle.JPG
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-fredericksburg-atari-missle.JPG
+- name: birdhouse-birdhouse-light-dali.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/birdhouse-birdhouse-light-dali.jpg
+- name: stalin-time-capital_36728420065_o.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stalin-time-capital_36728420065_o.jpg
+- name: old-barn-old-barn-1500-nazi-poster.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-barn-old-barn-1500-nazi-poster.jpg
+- name: stalin-time-train-station-cloud.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stalin-time-train-station-cloud.jpg
+- name: downtown-los-angeles-downtown-la-nazi-poster.JPG
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-los-angeles-downtown-la-nazi-poster.JPG
+- name: downtown-los-angeles-downtown-la-attack-planes.JPG
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-los-angeles-downtown-la-attack-planes.JPG
+- name: la-muse-girl-reading-garden-flowers.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/la-muse-girl-reading-garden-flowers.jpg
 ---
 Close Out Your Holidays On A Lighter Note With A Sumptuous Breakfast Strata.&nbsp;Anniston Schools Christmas Angels.&nbsp;Dog Taken From Car And East Village Mugging In Village Blotter.&nbsp;Winning Numbers Drawn In 'Cash 5' Game.&nbsp;'Ancient Spider' Fossil Turns Out To Be Crayfish With Painted Legs.&nbsp;Warren Police Present Families With Target Gift Cards.&nbsp;Key Elements For Auto And Short Term Loan Approval.&nbsp;Barcelona On Top In Survey Of Global Sports Salaries.&nbsp;
