--- a/_posts/2019-12-23-the-us-narrative-today.html
+++ b/_posts/2019-12-23-the-us-narrative-today.html
@@ -1,106 +1,123 @@
 ---
-images:
-- name: store-on-corner-oldcabin-bright-sand.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/store-on-corner-oldcabin-bright-sand.jpg
-- name: bf-skinner-old-time-cash-register.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bf-skinner-old-time-cash-register.jpg
-- name: trucksilo-trucksilo-blue-granite.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/trucksilo-trucksilo-blue-granite.jpg
-- name: white-house-lawn-white-house-window-plentiful.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-lawn-white-house-window-plentiful.jpg
-- name: downtown-fredericksburg-downtown-fredericksburg-plentiful.JPG
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-fredericksburg-downtown-fredericksburg-plentiful.JPG
-- name: downtown-fredericksburg-downtown-fredericksburg-atari-missle.JPG
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-fredericksburg-downtown-fredericksburg-atari-missle.JPG
-- name: catacombs-catacombs-blue-brush.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/catacombs-catacombs-blue-brush.jpg
-- name: power-lines-power-lines-empty-space-rainbow-festival.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/power-lines-power-lines-empty-space-rainbow-festival.jpg
-- name: mosaic-face-mosaic-face-marcel-duchamp.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mosaic-face-mosaic-face-marcel-duchamp.jpg
-- name: yosemite-yosemite-blue-brush.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/yosemite-yosemite-blue-brush.jpg
-- name: status-berlin-status-berlin-clean-view.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/status-berlin-status-berlin-clean-view.jpg
-- name: dragon-desert-desert-dragon-wols.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/dragon-desert-desert-dragon-wols.jpg
-- name: power-lines-power-lines-empty-space-deep-connections.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/power-lines-power-lines-empty-space-deep-connections.jpg
-- name: razorwire-DSC-0080-smoking-cigarette.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/razorwire-DSC-0080-smoking-cigarette.jpg
-- name: mediterranean-mediterranean-atari-asteroids.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mediterranean-mediterranean-atari-asteroids.jpg
-- name: redondo-beach-harbor-redondo-beach-harbor-clean-view.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/redondo-beach-harbor-redondo-beach-harbor-clean-view.jpg
-- name: christianity-christianity-under-construction-copper-circuit-2.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/christianity-christianity-under-construction-copper-circuit-2.jpg
-- name: liberty-back-statue-liberty-back-colorful-blocks.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/liberty-back-statue-liberty-back-colorful-blocks.jpg
-- name: flower-barbed-wire-flower-barbed-wire-colored-circuits.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/flower-barbed-wire-flower-barbed-wire-colored-circuits.jpg
-- name: downtown-los-angeles-downtown-la-ww2-dresden.JPG
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-los-angeles-downtown-la-ww2-dresden.JPG
-- name: pigeons-on-the-ledge-pigeons-on-ledge-blue-circuit-3.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/pigeons-on-the-ledge-pigeons-on-ledge-blue-circuit-3.jpg
-- name: store-on-corner-store-satan-red.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/store-on-corner-store-satan-red.jpg
-- name: bf-skinner-surveillance-3-camers.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bf-skinner-surveillance-3-camers.jpg
-- name: power-lines-power-lines-empty-space-pablo-blue.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/power-lines-power-lines-empty-space-pablo-blue.jpg
-- name: razorwire-DSC-0080-matrix.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/razorwire-DSC-0080-matrix.jpg
-- name: nazi-invasion-pigeon_35927783393_o.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nazi-invasion-pigeon_35927783393_o.jpg
-- name: oldroad-old-road-post-modern.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldroad-old-road-post-modern.jpg
-- name: statue-of-liberty-front-view-statueofliberty-pablo-blue.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/statue-of-liberty-front-view-statueofliberty-pablo-blue.jpg
-- name: windowmountain-window-mountain-blue-circuit.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/windowmountain-window-mountain-blue-circuit.jpg
-- name: old-gas-pumps-oldgaspumps-colorful-blocks.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-gas-pumps-oldgaspumps-colorful-blocks.jpg
-- name: soldiers-talking-34536952486-52cd6bb1d1-h-yellow-paper.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/soldiers-talking-34536952486-52cd6bb1d1-h-yellow-paper.jpg
-- name: downtown-trucksilo-dali-two.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-trucksilo-dali-two.jpg
-- name: old-gas-pumps-oldgaspumps-nazi-poster.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-gas-pumps-oldgaspumps-nazi-poster.jpg
-- name: aws-s3-stories-legalstatue-light-dali.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-stories-legalstatue-light-dali.jpg
-- name: walled-garden-walled-garden-clean-view.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/walled-garden-walled-garden-clean-view.jpg
-- name: crypto-machine-bletchley-crypto-machine-bletchley-space-pizza.png
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crypto-machine-bletchley-crypto-machine-bletchley-space-pizza.png
-- name: old-school-house-old-schoolhouse-feed-people.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-school-house-old-schoolhouse-feed-people.jpg
-- name: store-on-corner-store-diego-rivera1.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/store-on-corner-store-diego-rivera1.jpg
-- name: christianity-christianity-under-construction-monet-one.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/christianity-christianity-under-construction-monet-one.jpg
-- name: white-house-lawn-white-house-lawn-purple-pond.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-lawn-white-house-lawn-purple-pond.jpg
-- name: legal-statue-legalstatue-alien-goggles.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/legal-statue-legalstatue-alien-goggles.jpg
-- name: supreme-court-supremecourt-sand-paper.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/supreme-court-supremecourt-sand-paper.jpg
-- name: braceros-domingo-ulloa-old-time-cash-register.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/braceros-domingo-ulloa-old-time-cash-register.jpg
-- name: walled-garden-walled-garden-blue-circuit.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/walled-garden-walled-garden-blue-circuit.jpg
-- name: stalin-time-razor-wire-buildings.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stalin-time-razor-wire-buildings.jpg
-- name: flower-barbed-wire-flower-barbed-wire-marcel-duchamp.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/flower-barbed-wire-flower-barbed-wire-marcel-duchamp.jpg
-- name: border-crossing-bordercrossing-plentiful.png
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/border-crossing-bordercrossing-plentiful.png
-- name: bluelake-cinnamon-rolls-file-00-00-38-67.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bluelake-cinnamon-rolls-file-00-00-38-67.jpg
-- name: crypto-machine-bletchley-crypto-machine-bletchley-oily-mcoilface.png
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crypto-machine-bletchley-crypto-machine-bletchley-oily-mcoilface.png
-- name: nazi-invasion-los-angeles-downtown-from-afar.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nazi-invasion-los-angeles-downtown-from-afar.jpg
-- name: stories-capital-battle-blue-circuit.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stories-capital-battle-blue-circuit.jpg
+layout: post
+title: The US Narrative for December 23, 2019
+source: http://kinlane.com/2019/12/23/the-us-narrative-today/
+domain: the.us.narrative.today.kinlane.com
+stories:
+- title: Klobuchar On Her Past Support For Trump Judges
+  paper: 'Herald-Times '
+  city: Bloomington
+  state: Indiana
+  domain: http://www.hoosiertimes.com/
+  link: https://www.hoosiertimes.com/news/national/klobuchar-on-her-past-support-for-trump-judges/video_d4c0b579-7e47-51ad-8dc6-b4f201cb1ad2.html
+- title: Saudi Arabia Cuts Loose With Bevy Of Models And A Rave
+  paper: 'The Decatur Daily '
+  city: Decatur
+  state: Alabama
+  domain: http://www.decaturdaily.com/
+  link: https://www.decaturdaily.com/business/saudi-arabia-cuts-loose-with-bevy-of-models-and-a/image_20b1b1e1-43e0-57d4-b187-f472d155fe92.html
+- title: Lions Closing Out Another Disappointing Season
+  paper: 'Opelika-Auburn News '
+  city: Opelika
+  state: Alabama
+  domain: http://www.oanow.com/
+  link: https://www.oanow.com/lions-closing-out-another-disappointing-season/image_33c061c2-8333-579d-b3b9-f6b553db47da.html
+- title: Plastic Products Company Coming To Kershaw County
+  paper: 'Chronicle Independent '
+  city: Camden
+  state: South Carolina
+  domain: http://www.chronicle-independent.com/
+  link: https://www.chronicle-independent.com/news/business/plastic-products-company-coming-kershaw-county/
+- title: Winners Announced In Inaugural Drone Competition
+  paper: 'Palatka Daily News '
+  city: Palatka
+  state: Florida
+  domain: http://www.palatkadailynews.com/
+  link: https://www.palatkadailynews.com/local-news/winners-announced-inaugural-drone-competition
+- title: The Christ Light Shines Forever For You
+  paper: 'The News Herald '
+  city: Southgate
+  state: Michigan
+  domain: http://www.thenewsherald.com/
+  link: http://www.thenewsherald.com/downriver_life/regional/the-christ-light-shines-forever-for-you/article_4fb0fc34-a226-5a64-855d-a97dd25ef5d2.html
+- title: India's Leader Defends New Law As Protests Against It Go On
+  paper: 'Aspen Daily News '
+  city: Aspen
+  state: Colorado
+  domain: http://www.aspendailynews.com/
+  link: https://www.aspendailynews.com/associated_press/india-s-leader-defends-new-law-as-protests-against-it/article_35272a87-37a9-5463-a05c-919ae94bc0c9.html
+- title: China, South Korea, Japan Meet Over Trade, Regional Disputes
+  paper: 'Kerrville Daily Times '
+  city: Kerrville
+  state: Texas
+  domain: http://www.dailytimes.com/
+  link: https://www.valdostadailytimes.com/news/military/china-south-korea-japan-meet-over-trade-regional-disputes/image_f25aba58-fe63-5241-999e-a2453c6b0d69.html
+- title: CTDRC, Gary Job Corps Spread Holiday Joy To Community
+  paper: 'San Marcos Daily Record '
+  city: San Marcos
+  state: Texas
+  domain: http://www.sanmarcosrecord.com/
+  link: https://www.sanmarcosrecord.com/news/ctdrc-gary-job-corps-spread-holiday-joy-community
+- title: Willie Farmer Keeps The Blues Running Like A V8 Ford
+  paper: 'Memphis Flyer '
+  city: Memphis
+  state: Tennessee
+  domain: http://www.memphisflyer.com/
+  link: https://www.memphisflyer.com/memphis/willie-farmer-keeps-the-blues-running-like-a-v8-ford/Content?oid=21057523
+- title: Forget What Could've Been, Loss To Chiefs Couldn't Have Been More Embarrassing
+  paper: 'Valley News '
+  city: White River Junction
+  state: Vermont
+  domain: http://www.vnews.com/
+  link: https://www.gvnews.com/national/sports/forget-what-could-ve-been-loss-to-chiefs-couldn-t/article_b993de42-3ab7-5eb5-a91e-819613f3bb7e.html
+- title: Ed Sheeran And Wife Cherry Star In New Music Video
+  paper: 'Sidney Herald-Leader '
+  city: Sidney
+  state: Montana
+  domain: http://www.sidneyherald.com/
+  link: https://www.sidneyherald.com/national/entertainment/ed-sheeran-and-wife-cherry-star-in-new-music-video/image_d691e379-3878-5643-aba3-3d27e94ce2ac.html
+- title: Early Ticket Sales Available For Clark County Medical Society Alliances Fashion
+    Show
+  paper: 'Nevada Business Journal '
+  city: Las Vegas
+  state: Nevada
+  domain: http://www.nevadabusiness.com/
+  link: https://www.nevadabusiness.com/2019/12/early-ticket-sales-available-for-clark-county-medical-society-alliances-fashion-show/
+- title: Happy Birthdays And Anniversaries
+  paper: 'The Independent Tribune '
+  city: Concord
+  state: North Carolina
+  domain: http://www.independenttribune.com/
+  link: https://www.independenttribune.com/news/happy-birthdays-and-anniversaries/pdf_afdbf720-1b6a-5c78-8f3b-0f24e04adb55.html
+- title: Siegmeister Was Driven To Quit By Divorce, Lawyer Says
+  paper: 'Lake City Reporter '
+  city: Lake City
+  state: Florida
+  domain: http://www.lakecityreporter.com/
+  link: https://www.lakecityreporter.com/local/siegmeister-was-driven-quit-divorce-lawyer-says
+- title: Tornado A Lesson On Whats Important
+  paper: 'The South Reporter '
+  city: Holly Springs
+  state: Mississippi
+  domain: http://www.southreporter.com
+  link: https://www.southreporter.com/news/tornado-lesson-what%E2%80%99s-important
+- title: Harvard Picks Tishman Speyer To Develop Enterprise Research Campus In Allston
+  paper: 'Boston Herald '
+  city: Boston
+  state: Massachusetts
+  domain: http://www.bostonherald.com/
+  link: https://www.bostonherald.com/2019/12/22/harvard-picks-tishman-speyer-to-develop-enterprise-research-campus-in-allston/
+- title: McDonald Leads Chateaugay Over Saranac
+  paper: 'Press-Republican '
+  city: Plattsburgh
+  state: New York
+  domain: http://www.pressrepublican.com/
+  link: https://www.pressrepublican.com/sports/local_sports/mcdonald-leads-chateaugay-over-saranac/image_13a610f1-1d85-5ebd-8efd-095fc3713b08.html
+- title: New Mexico's Oil Region Schools See More Enrollment Spikes
+  paper: 'The Baytown Sun '
+  city: Baytown
+  state: Texas
+  domain: http://www.baytownsun.com/
+  link: http://baytownsun.com/sports/ap_sports/article_e1d3c9d7-ddb3-5f47-a9a5-da40166e6944.html
 ---
-
+Klobuchar On Her Past Support For Trump Judges.&nbsp;Saudi Arabia Cuts Loose With Bevy Of Models And A Rave.&nbsp;Lions Closing Out Another Disappointing Season.&nbsp;Plastic Products Company Coming To Kershaw County.&nbsp;Winners Announced In Inaugural Drone Competition.&nbsp;The Christ Light Shines Forever For You.&nbsp;India's Leader Defends New Law As Protests Against It Go On.&nbsp;China, South Korea, Japan Meet Over Trade, Regional Disputes.&nbsp;
